# parakses

./: AGENTS.md  Cargo.toml  README.md  image_hfs_plus.img  lefthook.yml  test_hfs.img
.github/workflows/: ci.yml
docs/: plan.md  write-support.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/blockio/: filedevice.rs  memfile.rs  mod.rs  physical.rs
src/hfs/: attribute.rs  catalog.rs  compression.rs  extents.rs  fork.rs  mod.rs  unicode.rs  volume_header.rs
src/hfs/btree/: key.rs  mod.rs  node.rs
src/util/: date.rs  mod.rs
src/volume/: mod.rs  partition.rs  windows.rs
